--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,35 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-  <div class="container-fluid">
-    <a href="#" class="navbar-brand"><img src="./img/logo.png" alt=""></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a href="#" class="nav-link">Home</a>
-        </li>
-
-        <li class="nav-item">
-          <a href="#" class="nav-link">About</a>
-        </li>
-
-        <li class="nav-item">
-          <a href="#" class="nav-link">Services</a>
-        </li>
-
-        <li class="nav-item">
-          <a href="#" class="nav-link">Team</a>
-        </li>
-
-        <li class="nav-item">
-          <a href="#" class="nav-link">Connect</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<app-header></app-header>
 <!--- Image Slider -->
 <div id="slides" class="carousel slide" data-ride="carousel">
   <ul class="carousel-indicators">
@@ -232,45 +201,13 @@
       <h2>Connect</h2>
     </div>
     <div class="col-12 social padding">
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-google-plus-g"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
+      <a href="/about-us"><i class="fab fa-facebook"></i></a>
+      <a href="/about-us"><i class="fab fa-twitter"></i></a>
+      <a href="/about-us"><i class="fab fa-google-plus-g"></i></a>
+      <a href="/about-us"><i class="fab fa-instagram"></i></a>
+      <a href="/about-us"><i class="fab fa-youtube"></i></a>
     </div>
   </div>
 </div>
 
-<!--- Footer -->
-<footer>
-  <div class="container-fluid padding">
-    <div class="row text-center">
-      <div class="col-md-4">
-        <img src="https://source.unsplash.com/random/100x50" alt="">
-        <hr class="light">
-        <p>(555) 555-5555</p>
-        <p>email@yahoo.mail</p>
-        <p>100 Street Name</p>
-        <p>City, State, 0000</p>
-      </div>
-      <div class="col-md-4">
-        <hr class="light">
-        <h5>Our Hours</h5>
-        <hr class="light">
-        <p>Monday: 9am - 5pm</p>
-        <p>Saturday: 10am - 4pm</p>
-        <p>Sunday: Closed.</p>
-      </div>
-      <div class="col-md-4">
-        <hr class="light">
-        <h5>Our Hours</h5>
-        <hr class="light">
-        <p>City, State, 0000</p>
-        <p>City, State, 0000</p>
-        <p>City, State, 0000</p>
-        <p>City, State, 0000</p>
-      </div>
-
-    </div>
-  </div>
-</footer>
+<app-footer></app-footer>
